--- a/VVProject/public/assets/hydrogen/css/style.css
+++ b/VVProject/public/assets/hydrogen/css/style.css
@@ -8510,9 +8510,119 @@ a > img.fh5co-align-center {
   letter-spacing: 2px;
 }
 
-.content-shop {
-  min-width: 100%;
-  padding: 2%;
+.product-card {
+  background: white;
+  border-radius: 5px;
+  border: 1px solid #EEEEEE;
+}
+
+.col-xs-15,
+.col-sm-15,
+.col-md-15,
+.col-lg-15 {
+    position: relative;
+    min-height: 1px;
+    padding-right: 10px;
+    padding-left: 10px;
+}
+
+.col-xs-15 {
+    width: 20%;
+    float: left;
+}
+
+@media (min-width: 768px) {
+.col-sm-15 {
+        width: 20%;
+        float: left;
+    }
+}
+
+@media (min-width: 992px) {
+    .col-md-15 {
+        width: 20%;
+        float: left;
+    }
+}
+
+@media (min-width: 1200px) {
+    .col-lg-15 {
+        width: 20%;
+        float: left;
+    }
+}
+
+.product-image {
+  border-bottom: 1px solid #EEEEEE;
+  border-radius: 5px;
+}
+
+.meta-product {
+}
+
+.product-title {
+  font-family: "Montserrat", arial, sans-serif;
+  text-align: center;
+  background: #212121;
+  color: white;
+  padding-left: 5%;
+  padding-right: 5%;
+}
+
+.product-card:hover .product-image {
+  opacity: 0.5;
+}
+
+.product-card:hover .meta-product .product-title {
+  color: black;
+  background: #FFA500;
+}
+
+.product-price {
+  color: #FFA500;
+  padding-left: 5%;
+  padding-right: 5%;
+  text-align: right;
+}
+
+.product-container {
   background: #EEEEEE;
-  margin-bottom: 2%;
+  padding-top: 1%;
+  padding-bottom: 1%;
+}
+
+.product-e-commerce {
+  font-size: 2em;
+  text-align: center;
+  color: #FFA500;
+  letter-spacing: 1px;
+  font-family: "Montserrat", arial, sans-serif;
+}
+
+.btn-see-more {
+  margin-top: 1%;
+  background: black;
+  padding: 0.5%;
+  font-style: normal;
+  border-radius: 25px;
+  text-decoration: none;
+  color: white;
+  margin-right: 1%;
+  display: -webkit-inline-box;
+}
+
+.btn-see-more:hover {
+  margin-top: 1%;
+  padding: 0.5%;
+  font-style: normal;
+  border-radius: 25px;
+  text-decoration: none;
+  color: white;
+  margin-right: 1%;
+  display: -webkit-inline-box;
+  background: #FFA500;
+}
+
+.navigate-to {
+  text-align: right;
 }
