--- a/VVProject/public/assets/hydrogen/css/style.css
+++ b/VVProject/public/assets/hydrogen/css/style.css
@@ -8626,3 +8626,28 @@ a > img.fh5co-align-center {
 .navigate-to {
   text-align: right;
 }
+
+.logo-vv {
+  letter-spacing: 6px;
+  font-family: "Montserrat", arial, sans-serif;
+  color: black;
+  text-align: center;
+  margin-top: 7%;
+}
+
+.btn-center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.form-margin {
+  margin-top: 2%;
+}
+
+.form-sheet {
+  padding-top: 1%;
+  background: white;
+  border: 1px solid #EEEEEE;
+  border-radius: 15px;
+}
